--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dns": "^0.2.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^8.1.1"
   },
   "license": "MIT",
   "devDependencies": {
